feat: add local authentication for v0.11.0-alpha
